# solana-kyc-compliance-sdk

./:  Add crypto.rs with signature verification  .ruleset-main-branch-protection.yml.  3rd set commands   Add Optional ZK Compliance Hook (Futureproof)  Add a simple token-bucket rate limiter  Add an assurtion  Add an exclusion list for known problematic directories or build artifacts:  Add at top (near other pub consts):  Add custom error  Add this block under the Initialize CodeQL step:  Additional Configuration Files  After applying a PR branch locally, run  Alternative: GitHub CLI Setup  Anchor.toml  Architecture test  Basic Protection Rules  Basic Protection RulesEnable these settings:  Benchmark harness for Rust workspace  CHANGELOG template + CHANGELOG.mdAdd a CHANGELOG.md at repo root (  CI & Anchor Deploy  CODE_OF_CONDUCT.md  Cached KYC Results (Gas Saver)  Check Your Branch Protection Settings  Client side intergration  Command set 1  Core Transfer Hook Tests  Create .gitleaks.toml for secrets scanning:  Create a feature branch instead of pushing directly to main  Create a feature branch instead of pushing directly to main:  CustomError enum  Depoy devnet_testnet_mainnet  Ecosystem Integration  Emergency Bypass Instructions  Emit events in update_kyc_level at end:  Emit these events in each function Add authority  Emit these events in each function Init  Enhanced Mock Implementations  Example Compliance Logic Audit  FALLBACK PATCH — client supplies metadata_hash to register_user  For Node signer demo  (+94 more)
docs/: overview.md  (+1 more)
programs/compliance_registry/: Cargo.toml
(+65 files in other folders)
