# --- programs/compliance_registry/Cargo.toml ---

[package]
name = "compliance_registry"
version = "0.1.0"
description = "Solana KYC/AML Compliance SDK Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Standard Anchor and Solana dependencies
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.0" }
solana-program = "1.18.17"

# Required for Token-2022 Mint and Account types (InterfaceAccount)
anchor-spl-token-2022 = { version = "0.30.0" }

# Required for the Extra Account Meta List (EAML) logic
spl-tlv-account-resolution = { version = "0.1.0", features = ["no-entrypoint"] }

# Required for Transfer Hook CPI
spl-token-2022 = { version = "3.0.0", features = ["no-entrypoint"] }

# Required for the TransferHook trait implementation
spl-transfer-hook-interface = { version = "0.1.0", features = ["no-entrypoint"] }

# Dependency for system clock access (used for compliance expiration check)
solana-program-runtime = "1.18.17"
